chore(gestalt-di): code cleanup, refactor raw-types